# product-catalog-service

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  SERVICE-QUALITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  quality-check.sh  quality-report.md  requirements.txt
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
sql/init/: 001_create_database.sql
src/: __init__.py  main.py
src/api/middleware/: __init__.py  error_handling.py  logging.py  metrics.py
src/api/models/: product.py
src/api/routes/: categories.py  health.py  products.py
src/core/: background_metrics.py  config.py  database.py  error_utils.py  events.py  exceptions.py  logging.py  metrics.py  middleware.py
src/core/models/: __init__.py  errors.py
src/models/: events.py  product.py
src/repositories/: __init__.py  base.py  category.py  product.py
tests/: __init__.py  conftest.py  test_categories.py  test_health.py  test_products.py
